--- a/js-for-net-developers/style.css
+++ b/js-for-net-developers/style.css
@@ -4,6 +4,9 @@ body {
   font-size: 24px;
 }
 
+strong { font-weight: bold; }
+em { font-style: italic; }
+
 ol {
   list-style: none;
 }
@@ -13,17 +16,47 @@ ul {
   margin-left: 20px;
 }
 
-h1 {
+ul.emphasize {
+  padding-top: 50px;
+  list-style: none;
   text-align: center;
+  font-size: 36px;
+}
+
+ul.emphasize li {
+  margin-top: 40px;
+}
+
+table {
+  border: 1px solid #c0c0c0;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  text-align: center;
+  border: 1px solid #c0c0c0;
+  padding: 15px;
+}
+
+th { font-weight: bold; }
+
+h1, h2 {
   font-family: 'Yanone Kaffeesatz', Arial, sans-serif;
   font-weight: bold;
+}
+
+h1 {
+  text-align: center;
   font-size: 48px;
   margin-bottom: 0.5em;
 }
 
+.single h1 {
+  margin-top: 300px;
+}
+
 h2 {
-  font-family: 'Yanone Kaffeesatz', Arial, sans-serif;
-  font-weight: bold;
   font-size: 36px;
   margin-bottom: 0.5em;
   margin-top: 1.5em;
